@startuml
!include ../.PlantUMLClass.config
scale 2
class Parser {
    + getUserCommand(userInput: String): Command
    - processCatalogCommand(userInput: String): Command
    - processAuthorMangaCommand(userInput: String, isDelete: boolean): Command
    - isValidDeleteCommand(userInput:String): boolean
    - processViewCommand(userInput: String): Command
    - processSalesCommand(userInput: String): Command
}

Parser ..> ArgumentFinder : extracts arguments using >

abstract class ArgumentFinder <<abstract>> {
    # pattern: Pattern
    # matcher: Matcher
    # option: String
    + ArgumentFinder(pattern: Pattern, option: String): ArgumentFinder
    + <<abstract>> getArgumentResult(userInput: String): ArgumentResult
}

ArgumentFinder ..> ArgumentResult : generates >
ArgumentResult ..> Parser : provides arguments for >

class Regex {
    + {static} AUTHOR_NAME_EXTRACTOR_PATTERN: Pattern
    + {static} MANGA_NAME_EXTRACTOR_PATTERN: Pattern
    + {static} PRICE_EXTRACTOR_PATTERN: Pattern
    + {static} QUANTITY_EXTRACTOR_PATTERN: Pattern
    - {static} generateExtractorPattern(includedOptionFlag: String): Pattern
}

ArgumentFinder ..> Regex : uses patterns from >

class ArgumentResult {
    - argument: String
    - outputString: String
    + ArgumentResult(argument: String, outputString: String): ArgumentResult
    + getArgument(): String
    + getOutputString(): String
}

class AuthorArgumentFinder {
    + AuthorArgumentFinder(): AuthorArgumentFinder
    +getArgumentResult(userInput: String): ArgumentResult
}

class MangaArgumentFinder {
    + MangaArgumentFinder(): MangaArgumentFinder
    + getArgumentResult(userInput: String): ArgumentResult
}

class PriceArgumentFinder {
    + PriceArgumentFinder(): PriceArgumentFinder
    + getArgumentResult(userInput: String): ArgumentResult
}

class QuantityArgumentFinder {
    + QuantityArgumentFinder(): QuantityArgumentFinder
    + getArgumentResult(userInput: String): ArgumentResult
}

AuthorArgumentFinder --|> ArgumentFinder
MangaArgumentFinder --|> ArgumentFinder
PriceArgumentFinder --|> ArgumentFinder
QuantityArgumentFinder --|> ArgumentFinder

abstract class Command <<abstract>> {
    # logger: Logger
    - command: String
    - isExit: boolean
    + Command(command: String): Command
    + setExit(exit: boolean): void
    + isExit(): boolean
    + <<abstract>> execute(ui: Ui, authorList: AuthorList): void
}

Parser ..> Command : generates and provides arguments for various >

@enduml